basically finished with page 3, just need to update images, onto page 4

--- a/index.html
+++ b/index.html
@@ -152,17 +152,30 @@
                 <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
             </div>
             <p class="port-text">
-                Here are some examples of my work.
+                Links to some of my projects can be found below
             </p>
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
                         <img src="img/NVIDIA12monthforecast.png" alt="">
                     </div>
-                    <div class="hover-item">
-                        <h3>Project Source</h3>
+                    <div class="hover-items">
+                        <h3>Equity price forecasting</h3>
                         <div class="icons">
                             <a href="https://github.com/nickessner/FinancialPredictions" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/wemby.jpg" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Standing reach and plus minus</h3>
+                        <div class="icons">
+                            <a href="https://github.com/nickessner/NBA" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
